[gd_scene load_steps=13 format=3 uid="uid://bmo6xl6djg5bd"]

[ext_resource type="Script" path="res://Main/Card.gd" id="1_mbdfi"]
[ext_resource type="Texture2D" uid="uid://c5dsrcml4fdc" path="res://PixelCard_Assets/Cards/Card_Back_Blue_Old 2.png" id="2_mqt6k"]
[ext_resource type="Texture2D" uid="uid://c3cspugt3l6mo" path="res://PixelCard_Assets/Cards/Card_Selected05_ThickOuterBorder66x98.png" id="3_qew3d"]
[ext_resource type="Texture2D" uid="uid://beb6uxacgdavu" path="res://PixelCard_Assets/Cards/Card_flip_right_blue.png" id="3_wck6d"]
[ext_resource type="Texture2D" uid="uid://bpjuipi1t418d" path="res://PixelCard_Assets/Cards/Clubs/Card_2Clubs.png" id="4_j2xbq"]
[ext_resource type="Texture2D" uid="uid://uql8gmtslahb" path="res://PixelCard_Assets/Cards/Joker.png" id="6_5jpwc"]
[ext_resource type="Texture2D" uid="uid://data6lvtbf75l" path="res://PixelCard_Assets/Cards/Card_flip_left_blue.png" id="6_q30j8"]

[sub_resource type="Animation" id="Animation_3rur6"]
resource_name = "Flip_back"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_mqt6k"), ExtResource("6_q30j8"), ExtResource("2_mqt6k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_face:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q0fee"]
resource_name = "Flip_right"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_mqt6k"), ExtResource("3_wck6d"), ExtResource("6_5jpwc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_face:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dv2y7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mqt6k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("card_face:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e62u3"]
_data = {
"Flip_back": SubResource("Animation_3rur6"),
"Flip_right": SubResource("Animation_q0fee"),
"RESET": SubResource("Animation_dv2y7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bs18"]
size = Vector2(64, 96)

[node name="Card" type="Node2D"]
script = ExtResource("1_mbdfi")

[node name="flip_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Card_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_mqt6k")

[node name="outline" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_qew3d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e62u3")
}

[node name="card_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="card_area"]
visible = false
shape = SubResource("RectangleShape2D_8bs18")

[node name="card_face" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_j2xbq")

[node name="Label" type="Label" parent="."]
offset_left = -29.0
offset_top = -73.0
offset_right = 11.0
offset_bottom = -50.0

[connection signal="timeout" from="flip_timer" to="." method="_on_flip_timer_timeout"]
[connection signal="input_event" from="card_area" to="." method="_on_card_area_input_event"]
[connection signal="mouse_entered" from="card_area" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="card_area" to="." method="_on_card_area_mouse_exited"]
